Added STUPID basics, added Mr. Pineapple info

--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
 <h2 style="background-color:tomato; margin:30px; border:5px; text-align:center; color:white;">For musical bookings, see the 'Contact Me' section below.</h2>
 	
 <h3>About Me:</h3>
-<p>I'm a 23-year-old musician and hobbyist maker of various things. Currently based in Reading, UK, playing in <a href="https://www.moonagebowietribute.co.uk/">Moonage, a David Bowie Tribute Band.</a></p>
+<p>I'm a 23-year-old musician and hobbyist maker of various things. Currently based in Reading, UK, playing in <a href="https://www.moonagebowietribute.co.uk/">Moonage, a David Bowie Tribute Band</a>, and <a href="https://www.instagram.com/mr_pineapple_band/">Mr. Pineapple, a somewhat silly and proggy rock band.</a></p>
 <p>There's still a lot to write up, but this website aims to collect together various projects I've done over the years, including:</p>
 <ul>
 	<li>A MIDI-based lightshow device for my keyboard</li>
