--- a/index.html
+++ b/index.html
@@ -20,36 +20,10 @@
 	
 	<hr>
 	
-	<div class="flex-container">
-		<div><th><form action="https://www.fiverr.com/olihagen?up_rollout=true" target="_blank">
-	       <button class="button button2" title="'Career portfolio in the Gig Economy'" type="submit"><b>Fiverr</b></button>
-	    </form></th></div>
-	</div>
+	<!--<h3 style="text-align:center;">Latest Music:</h3>
+	<h4 style="text-align:center;">STUPID - Original album</h4>
 	
-	<p style="text-align:center;">Giving this a try</p>
-		
-	<hr>
-	<h3 style="text-align:center;">Moonage</h3>
-	<h4 style="text-align:center;">David Bowie Tribute band I'm currently playing keyboards with</h4>
-	
-	<img src="moonage.jpg" alt="Moonage picture" style="width:200px;height:200px;"></img>
-	
-	<p style="text-align:center;">Check link for gig dates</p>
-	
-	<div class="flex-container">
-		
-		<div><th><form action="https://www.moonagebowietribute.co.uk" target="_blank">
-             <button class="button button1" type="submit">Website</button>
-          </form></th></div>
-		
-	</div>
-	
-	
-	<hr>
-	<h3 style="text-align:center;">Latest Music:</h3>
-	<h4 style="text-align:center;">Perfection Can't Be Rushed (but this sure can) - Original EP</h4>
-	
-	<img src="Music/RPM2023/RPM2023.png" alt="Perfection Can't Be Rushed album art" style="width:200px;height:200px;"></img>
+	<a href="Music/STUPID/STUPID.html"><img src="Music/STUPID/STUPID.jpg" alt="Perfection Can't Be Rushed album art" style="width:200px;height:200px;"></img></a>
 	
 	<div class="flex-container">
 		
@@ -66,6 +40,25 @@
     	  <div><th><a href="https://youtube.com/playlist\?list=PL776zvniD1BgejY1hwlu_AQt2f5ICpiuN" target="_blank"><button class="button button1">YouTube</button></a></th></div>
 		
 	</div>
+	
+	<hr>
+	!-->
+	<div class="flex-container">
+		<div><th><form action="https://www.fiverr.com/olihagen?up_rollout=true" target="_blank">
+	       <button class="button button2" title="'Career portfolio in the Gig Economy'" type="submit"><b>Fiverr</b></button>
+	    </form></th></div>
+	</div>
+	
+	<p style="text-align:center;">Giving this a try</p>
+		
+	<hr>
+	<h3 style="text-align:center;">Bands I play with</h3>
+	
+	<div id="grid">
+		<a href="https://www.moonagebowietribute.co.uk" class="img" style="background-image: url(moonage.jpg)" title="Moonage - Best of Bowie Tribute Band. I play keyboard and sing backing vocals"></a>
+		<a href="https://www.instagram.com/mr_pineapple_band/" class="img" style="background-image: url(pineapple.jpg)" title="Mr. Pineapple - Weird rock/prog/silliness. I play synth and sing backing vocals"></a>
+	 </div>
+	
 	
 	<hr>
 	<h3 style="text-align:center;">Socials</h3>
@@ -85,7 +78,7 @@
 	</div>
 	
 	<hr>
-	<h3 style="text-align:center;">Catalogue</h3>
+	<h3 style="text-align:center;">My Music</h3>
 	
 	<div class="flex-container">
 		
@@ -108,7 +101,7 @@
 	</div>
 	  
 <hr>
-Last updated 2024-11-07
+Last updated 2024-11-28
 </body>
 </html>
 
