--- a/Music/home.html
+++ b/Music/home.html
@@ -43,12 +43,13 @@
 	
 	<h2 style="text-align:center;">Music</h2>	
 	
-<p style="text-align:center;">Music is far and away my favourite thing in the world. I love to listen to it, play it, write it, record it, mix it and share it.<br><br>I'm currently between musical obsessions, and trying to re-learn my scales to get 'fitter' at piano again.</p>
+<p style="text-align:center;">Music is far and away my favourite thing in the world. I love to listen to it, play it, write it, record it, mix it and share it.<br><br>I'm currently geeking out on all sorts of classic prog, and attempting to learn how to play and write in the style(s) without just sounding like Wick Rakeman or Bony Tanks.</p>
 <p style="text-align:center;">Collected below are musical projects I've been involved with. Some are completely my own, while others are collaborative efforts I've been lucky enough to be a part of. All of them were fun to do, and I hope they hold some interest.</p>
 
 <br>
 
 <div id="grid">
+	<!--<a href="STUPID/STUPID.html" class="img" style="background-image: url(STUPID/STUPID.jpg)" title="STUPID - An original album currently being recorded."></a>!-->
 	<a href="RPM2023/RPM2023.html" class="img" style="background-image: url(RPM2023/RPM2023.png)" title="Perfection Can't Be Rushed (but this sure can) - An EP of disparate songs written and recorded for the 2023 RPM Challenge"></a>
 	<a href="Splinters/Splinters.html" class="img" style="background-image: url(Splinters/Splinters.jpg)" title="Splinters OST - My first big composing project: an original score for a five star play"></a>
 	<a href="MelancholyChristmas/MelancholyChristmas.html" class="img" style="background-image: url(MelancholyChristmas/MelancholyChristmas.jpg)" title="Melancholy Christmas - Mutual Frogs: The first song I produced for other musicians."></a>
@@ -60,7 +61,7 @@
  </div>
 
 <hr>
-Last updated 2024-11-07
+Last updated 2024-11-28
 </body>
 </html>
 
