Fixed Bandcamp link

--- a/Making/home.html
+++ b/Making/home.html
@@ -15,7 +15,7 @@
 	
 	<div class="flex-container">
 		
-	  <div><th><form action="https://oliverhagen.bandcamp.com/releases;" target="_blank">
+	  <div><th><form action="https://oliverhagen.bandcamp.com" target="_blank">
          <button class="button button3" title="Where my original music lives" type="submit"><b>Bandcamp</b></button>
       </form></th></div>
 	  
@@ -58,7 +58,7 @@
  </div>
 
 <hr>
-Last updated 2024-11-02
+Last updated 2025-01-05
 </body>
 </html>
 
