--- a/index.html
+++ b/index.html
@@ -43,13 +43,24 @@
 	
 	<hr>
 	!-->
+		
 	<div class="flex-container">
-		<div><th><form action="https://www.fiverr.com/olihagen?up_rollout=true" target="_blank">
-	       <button class="button button2" title="'Career portfolio in the Gig Economy'" type="submit"><b>Fiverr</b></button>
-	    </form></th></div>
+		
+	  	<div class="flex-container">
+	  		<div><th><form action="https://www.fiverr.com/olihagen?up_rollout=true" target="_blank">
+	  	       <button class="button button2" title="'Career portfolio in the Gig Economy'" type="submit"><b>Fiverr</b></button>
+	  	    </form></th></div>
+	  	</div>
+	
+	  	<div class="flex-container">
+	  		<div><th><form action="https://reverb.com/uk/shop/olivers-gear-bazaar-259" target="_blank">
+	  	       <button class="button button4" title="Got some stuff to get rid of" type="submit"><b>Reverb</b></button>
+	  	    </form></th></div>
+	  	</div>
+		
 	</div>
 	
-	<p style="text-align:center;">Giving this a try</p>
+	<p style="text-align:center;">Giving these a try</p>
 		
 	<hr>
 	<h3 style="text-align:center;">Bands I play with</h3>
@@ -101,7 +112,7 @@
 	</div>
 	  
 <hr>
-Last updated 2024-11-28
+Last updated 2025-01-05
 </body>
 </html>
 
