--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 	
 	<div class="flex-container">
 		
-	  <div><th><form action="https://oliverhagen.bandcamp.com/releases;" target="_blank">
+	  <div><th><form action="https://oliverhagen.bandcamp.com" target="_blank">
          <button class="button button3" title="Where my original music lives" type="submit"><b>Bandcamp</b></button>
       </form></th></div>
 	  
@@ -173,7 +173,7 @@ Current planned improvements include better scaling for mobile devices and very 
 I do not plan on switching to a website supplier/designer such as Squarespace, because apparently I'm a stubborn old fart trapped in a young man's body.</p>
 
 <hr>
-Last updated 2024-11-07
+Last updated 2025-01-05
 </body>
 </html>
 
