Glow Lamp page added

--- a/home.html
+++ b/home.html
@@ -79,6 +79,12 @@
 		<th>Title</th>
 	  </tr>
 	  <tr>
+		  <td><img src="Making/glowLamp/thumbnail.png" style="height:50px;width:50px;"></td>
+	    <td>2025-01-06</td>
+		<td><a href="Making/home.html">Making</a></td>
+		<td><a href="Making/glowLamp/glowLamp.html">Glow Lamp - a cheery night-light, powered by an Arduino</a></td>
+	  </tr>
+	  <tr>
 		  <td><img src="Making/moop1/thumbnail.jpg" style="height:50px;width:50px;"></td>
 	    <td>2024-09-12</td>
 		<td><a href="Making/home.html">Making</a></td>
@@ -173,7 +179,7 @@ Current planned improvements include better scaling for mobile devices and very 
 I do not plan on switching to a website supplier/designer such as Squarespace, because apparently I'm a stubborn old fart trapped in a young man's body.</p>
 
 <hr>
-Last updated 2025-01-05
+Last updated 2025-01-06
 </body>
 </html>
 
