--- a/Making/home.html
+++ b/Making/home.html
@@ -49,7 +49,7 @@
 <br>
 
 <div id="grid">
-	<a href="glowLamp/glowLamp.html" class="img" style="background-image: url(glowLamp/thumbnail.png)" title="Glow Lamp - a cheery night-light powered by an Arduino"></a>
+	<a href="GlowLamp/glowLamp.html" class="img" style="background-image: url(GlowLamp/thumbnail.png)" title="Glow Lamp - a cheery night-light powered by an Arduino"></a>
 	<a href="moop1/moop1.html" class="img" style="background-image: url(moop1/thumbnail.jpg)" title="MOOP1, a MIDI Foot Manual - watch your back, Geddy Lee"></a>
 	<a href="DivingBoard/DivingBoard.html" class="img" style="background-image: url(DivingBoard/DivingBoard.png)" title="DivingBoard - a homemade sysex MIDI controller to combat menu diving"></a>
 	<a href="SolarTrader/SolarTrader.html" class="img" style="background-image: url(SolarTrader/SolarTrader.png)" title="Solar Trader - bootlegging an out-of-print board game from the '90s"></a>
