--- a/Making/home.html
+++ b/Making/home.html
@@ -49,6 +49,7 @@
 <br>
 
 <div id="grid">
+	<a href="f2fPlusPot/f2fPlusPot.html" class="img" style="background-image: url(f2fPlusPot/thumbnail.jpg)" title="Audio doohickey - a female-to-female 3.5mm audio connector with a volume knob"></a>
 	<a href="GlowLamp/glowLamp.html" class="img" style="background-image: url(GlowLamp/thumbnail.png)" title="Glow Lamp - a cheery night-light powered by an Arduino"></a>
 	<a href="moop1/moop1.html" class="img" style="background-image: url(moop1/thumbnail.jpg)" title="MOOP1, a MIDI Foot Manual - watch your back, Geddy Lee"></a>
 	<a href="DivingBoard/DivingBoard.html" class="img" style="background-image: url(DivingBoard/DivingBoard.png)" title="DivingBoard - a homemade sysex MIDI controller to combat menu diving"></a>
@@ -59,7 +60,7 @@
  </div>
 
 <hr>
-Last updated 2025-01-06
+Last updated 2025-01-26
 </body>
 </html>
 
