--- a/Making/f2fPlusPot/f2fPlusPot.html
+++ b/Making/f2fPlusPot/f2fPlusPot.html
@@ -12,7 +12,7 @@
 <h1 style="text-align:center;"><a href="../../home.html">Oliver Hagen</a></h1>
 <h2 style="text-align:center;"><a href="../home.html">Making</a></h2>
 
-<h3 style="text-align:center;">A genuine little audio doohickey</h3>
+<h3 style="text-align:center;">Portable Volume Knob</h3>
 <p style="text-align:center;">A female-to-female 3.5mm audio cable connector with a volume knob, built for a very specific purpose</p>
 
 <img src="FinalResult.jpg" title="The doohickey placed on top of the radio"></img>
@@ -40,9 +40,9 @@
 
 <p style="text-align:center;">I don't know if it makes any difference which jack is the input and which one's the output- it is after all only a resistor that the signal's going through. I thought I'd mark them out anyway, as well as the travel limits of the pot. In a quirk of the pot I got, the 'raise the volume' direction of rotation actually lowers the volume. A bit weird, but should be easy enough to remember after a few mistakes.</p>
 
-<p style="text-align:center;">This is the smallest least obviously functional thing I've made so far. It feels like junk that you'd find in the back of a cupboard in an old workshop, or in some car boot or charity shop. Hence the official designation of 'doohickey'. A very useful doohickey though.</p>
+<p style="text-align:center;">This is the smallest least obviously functional thing I've made so far. It feels like junk that you'd find in the back of a cupboard in an old workshop, or in some car boot or charity shop; a doohickey. A very useful doohickey though.</p>
 
 <hr>
-Last updated 2025-01-26
+Last updated 2025-01-27
 </body>
 </html>
