--- a/home.html
+++ b/home.html
@@ -80,9 +80,9 @@
 	  </tr>
 	  <tr>
 		  <td><img src="Making/f2fPlusPot/thumbnail.jpg" style="height:50px;width:50px;"></td>
-	    <td>2025-01-06</td>
+	    <td>2025-01-26</td>
 		<td><a href="Making/home.html">Making</a></td>
-		<td><a href="Making/f2fPlusPot/f2fPlusPot.html">Audio doohickey - a female-to-female 3.5mm audio connector with a volume knob</a></td>
+		<td><a href="Making/f2fPlusPot/f2fPlusPot.html">Portable Volume Knob - a female-to-female 3.5mm audio connector with a volume knob</a></td>
 	  </tr>
 	  <tr>
 	  <tr>
@@ -186,7 +186,7 @@ Current planned improvements include better scaling for mobile devices and very 
 I do not plan on switching to a website supplier/designer such as Squarespace, because apparently I'm a stubborn old fart trapped in a young man's body.</p>
 
 <hr>
-Last updated 2025-01-26
+Last updated 2025-01-27
 </body>
 </html>
 
