--- a/Making/misc1/MISC1.html
+++ b/Making/misc1/MISC1.html
@@ -109,10 +109,21 @@ I also rearranged a few staplers, mostly putting taller ones in the accidental s
 
 <img src="14gloop.jpg" title="The wood with a freshly applied PVA coating"></img>
 
-<p style="text-align:center;">Once the pieces were all sanded down, I investigated treating the wood to reduce flaking. An idea I had was using dilute PVA glue, in the hopes that it would soak into the wood and then dry in place, binding the outside a bit more effectively and reducing the flakiness. The internet says that this (probably) works, so I gave it a try- it's drying overnight as I write this.</p>
+<p style="text-align:center;">Once the pieces were all sanded down, I investigated treating the wood to reduce flaking. An idea I had was using dilute PVA glue, in the hopes that it would soak into the wood and then dry in place, binding the outside a bit more effectively and reducing the flakiness. The internet says that this (probably) works, so I gave it a try- the results showed no improvement in the wood surface, perhaps due to an overly low amount of glue in the mixture.</p>
+
+<h4>2025-01-27</h4>
+
+<img src="15joined.jpg" title="The pieces assembled"></img>
+
+<p style="text-align:center;">The assembly was done simply with screws and wood glue, outside on a windy afternoon. I also drilled out holes either side of each stapler for the zip ties, and glued down the accidental supports.</p>
+
+<img src="16woodIssues.png" title="splinters"></img>
+
+<p style="text-align:center;">One issue I ran into was that the chipboard had a tendency to splinter apart on the opposite side of the wood to the drillbit, meaning that the 'exit wounds' were all very messy and jagged. I cleaned these up by simply tearing off any small pieces hanging from the main structure to reduce the risk of splinters, but the resulting divots in the surface could potentially be sites of future deterioration due to weathering. I shall attempt to seal the wood more effectively as a next step.</p>
+
 
 <hr>
-Last updated 2025-01-21
+Last updated 2025-01-27
 </body>
 </html>
 
