--- a/Music/home.html
+++ b/Music/home.html
@@ -50,6 +50,7 @@
 
 <div id="grid">
 	<!--<a href="STUPID/STUPID.html" class="img" style="background-image: url(STUPID/STUPID.jpg)" title="STUPID - An original album currently being recorded."></a>!-->
+	<a href="RPM2025/RPM2025.html" class="img" style="background-image: url(RPM2025/RPM2025.png)" title="Magical Murderers Making Hilarious Decisions - An EP of D&D-themed songs written and recorded for the 2025 RPM Challenge"></a>
 	<a href="RPM2023/RPM2023.html" class="img" style="background-image: url(RPM2023/RPM2023.png)" title="Perfection Can't Be Rushed (but this sure can) - An EP of disparate songs written and recorded for the 2023 RPM Challenge"></a>
 	<a href="Splinters/Splinters.html" class="img" style="background-image: url(Splinters/Splinters.jpg)" title="Splinters OST - My first big composing project: an original score for a five star play"></a>
 	<a href="MelancholyChristmas/MelancholyChristmas.html" class="img" style="background-image: url(MelancholyChristmas/MelancholyChristmas.jpg)" title="Melancholy Christmas - Mutual Frogs: The first song I produced for other musicians."></a>
@@ -61,7 +62,7 @@
  </div>
 
 <hr>
-Last updated 2025-01-05
+Last updated 2025-02-28
 </body>
 </html>
 
