--- a/home.html
+++ b/home.html
@@ -79,6 +79,12 @@
 		<th>Title</th>
 	  </tr>
 	  <tr>
+		  <td><img src="Music/RPM2025/RPM2025.png" alt="Magical Murderers Making Hilarious Decisions cover" style="width:50px;height:50px;"></td>
+	    <td>2025-02-28</td>
+		<td><a href="Music/home.html">Music</a></td>
+		<td><a href="Music/RPM2025/RPM2025.html">Magical Murderers Making Hilarious Decisions - a D&D-themed EP in a month for the 2025 RPM challenge</a></td>
+	  </tr>
+	  <tr>
 		  <td><img src="Making/f2fPlusPot/thumbnail.jpg" style="height:50px;width:50px;"></td>
 	    <td>2025-01-26</td>
 		<td><a href="Making/home.html">Making</a></td>
@@ -186,7 +192,7 @@ Current planned improvements include better scaling for mobile devices and very 
 I do not plan on switching to a website supplier/designer such as Squarespace, because apparently I'm a stubborn old fart trapped in a young man's body.</p>
 
 <hr>
-Last updated 2025-01-27
+Last updated 2025-02-28
 </body>
 </html>
 
