--- a/index.html
+++ b/index.html
@@ -44,34 +44,6 @@
 	<hr>
 	!-->
 		
-	<div class="flex-container">
-		
-	  	<div class="flex-container">
-	  		<div><th><form action="https://www.fiverr.com/olihagen?up_rollout=true" target="_blank">
-	  	       <button class="button button2" title="'Career portfolio in the Gig Economy'" type="submit"><b>Fiverr</b></button>
-	  	    </form></th></div>
-	  	</div>
-	
-	  	<div class="flex-container">
-	  		<div><th><form action="https://reverb.com/uk/shop/olivers-gear-bazaar-259" target="_blank">
-	  	       <button class="button button4" title="Got some stuff to get rid of" type="submit"><b>Reverb</b></button>
-	  	    </form></th></div>
-	  	</div>
-		
-	</div>
-	
-	<p style="text-align:center;">Giving these a try</p>
-		
-	<hr>
-	<h3 style="text-align:center;">Bands I play with</h3>
-
-	
-	<div id="grid">
-		<a href="https://www.moonagebowietribute.co.uk" class="img" style="background-image: url(moonage.jpg)" title="Moonage - Best of Bowie Tribute Band. I play keyboard and sing backing vocals"></a>
-		<a href="https://www.instagram.com/mr_pineapple_band/" class="img" style="background-image: url(pineapple.jpg)" title="Mr. Pineapple - Weird rock/prog/silliness. I play synth and sing backing vocals"></a>
-	 </div>
-	
-	<hr>
 	<h3 style="text-align:center;">Socials</h3>
 	
 	<div class="flex-container">
@@ -89,7 +61,7 @@
 	</div>
 	
 	<hr>
-	<h3 style="text-align:center;">My Music</h3>
+	<h3 style="text-align:center;">Music</h3>
 	
 	<div class="flex-container">
 		
@@ -110,9 +82,33 @@
       </form></th></div>
 		
 	</div>
+		<hr>
+	<h3 style="text-align:center;">Bands I play with</h3>
+
+	<div id="grid">
+		<a href="https://www.moonagebowietribute.co.uk" class="img" style="background-image: url(moonage.jpg)" title="Moonage - Best of Bowie Tribute Band. I play keyboard and sing backing vocals"></a>
+		<a href="https://www.instagram.com/mr_pineapple_band/" class="img" style="background-image: url(pineapple.jpg)" title="Mr Pineapple - Weird rock/prog/silliness. I play synth and sing backing vocals"></a>
+		<a href="http://bowseywoods.uk/" class="img" style="background-image: url(BowseyWoods.jpg)" title="Bowsey Woods - Pop/rock by Reading musician Andy Barker. I play keyboard and sing backing vocals"></a>
+	 </div>
+	
+<hr>
+  	<div class="flex-container">
+		
+  	  	<div class="flex-container">
+  	  		<div><th><form action="https://www.fiverr.com/olihagen?up_rollout=true" target="_blank">
+  	  	       <button class="button button2" title="'Career portfolio in the Gig Economy'" type="submit"><b>Fiverr</b></button>
+  	  	    </form></th></div>
+  	  	</div>
+	
+  	  	<div class="flex-container">
+  	  		<div><th><form action="https://reverb.com/uk/shop/olivers-gear-bazaar-259" target="_blank">
+  	  	       <button class="button button4" title="Got some stuff to get rid of" type="submit"><b>Reverb</b></button>
+  	  	    </form></th></div>
+  	  	</div>	
+  	</div>
 	  
 <hr>
-Last updated 2025-01-05
+Last updated 2025-05-03
 </body>
 </html>
 
