--- a/repairsDemo.html
+++ b/repairsDemo.html
@@ -12,8 +12,10 @@
 </style>
 <body>
 	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <h1 style="text-align:center;">Repairs</h1>
+<h2>Current Average Wait Time: One Month</h1>
 
 
 	<table style="text-align:left; border-spacing:10px">
@@ -26,42 +28,46 @@
 	  </tr>
 	  <tr>
 		<td>0000001</td>
-	    <td>2025-03-25</td>
-		<td>2025-04-08</td>
+	    <td>2025-05-05</td>
+		<td>2025-06-05</td>
 		<td>Restring</td>
 		<td style="background-color:lime">Ready for collection</td>
 	  </tr>
 	  <tr>
 		<td>0000002</td>
-	    <td>2025-04-05</td>
-		<td>2025-04-19</td>
+	    <td>2025-05-25</td>
+		<td>2025-06-25</td>
 		<td>Set-up and restring + electrical fault</td>
 		<td style="background-color:lime">Ready for collection</td>
 	  </tr>
 	  <tr>
 		<td>0000003</td>
-	    <td>2025-04-13</td>
-		<td>2025-04-27</td>
+	    <td>2025-05-13</td>
+		<td>2025-06-13</td>
 		<td>Fit new bridge</td>
 		<td style="background-color:gold">Parts ordered- awaiting delivery</td>
 	  </tr>
 	  <tr>
 		<td>0000004</td>
-	    <td>2025-04-15</td>
-		<td>2025-04-29</td>
+	    <td>2025-06-15</td>
+		<td>2025-07-15</td>
 		<td>Restring</td>
 		<td style="background-color:lightgrey">In queue</td>
 	  </tr>
 	  <tr>
 		<td>0000004</td>
-	    <td>2025-04-15</td>
-		<td>2025-04-29</td>
+	    <td>2025-06-15</td>
+		<td>2025-07-15</td>
 		<td>Replace tuning pegs</td>
 		<td style="background-color:salmon">Delayed (?)</td>
 	  </tr>
 	</table>
 
 <p>Last Updated 2025-04-14</p>
+
+<h2>About:</h2>
+<p>This quick, simple website shows all repairs currently in progress in the workshop, along with their status. This is updated at the end of each working day, so check back for updates.</p>
+<p></p>
 
 <h2>Contact us:</h2>
 <p>Questions about the status of your instrument, or our repair service? Give us a ring on 24601 420 069, or <a href="mailto:ooga@booga.com">Send us an email</a>- be sure to quote your Repair Reference Number for a quicker response.</p>
