--- a/Making/DivingBoard/DivingBoard.html
+++ b/Making/DivingBoard/DivingBoard.html
@@ -88,12 +88,12 @@ It does sound a bit like I've glossed over some stuff there, but the instruction
 <hr>
 <h3>Footnotes</h3>
 <p id="footnote-1">
-   1. Arduino Nano type board at &pound;5, Raspberry Pi Zero 2 at &pound;15, eight potentiometers at &pound;12, four rotary encoders at &pound;8, 20x4 LCD at &pound;10, tupperware at &pound;10. For reference, the cheapest Sysex-capable MIDI controller I could find was about double that price (Novation Remote Zero). Figures correct as of 2024-01-10. <a href="#footnote-1-ref">&#8617;</a> 
+   1. Arduino Nano type board at &pound;5, Raspberry Pi Zero 2 at &pound;15, eight potentiometers at &pound;12, four rotary encoders at &pound;8, 20x4 LCD at &pound;10, tupperware at &pound;10. For reference, the cheapest Sysex-capable MIDI controller I could find was about double that price (Novation Remote Zero). Figures correct as of 2024-01-10. <a href="#footnote-1-ref">&#8617;</a> </p>
 <p id="footnote-2">
    2. UX needs some minor improvements (mostly idiot-proofing (not a dig at users; <i>I'm</i> the idiot)), a planned software editor for making more detailed configurations is planned but not written, and the device is occasionally a bit erratic; freezing or failing to boot properly are both rare but recurring problems.<a href="#footnote-2-ref">&#8617;</a> 
 </p>
 <hr>
-Last updated 2024-11-07
+Last updated 2025-07-26
 </body>
 </html>
 
