--- a/Music/RPM2023/RPM2023.html
+++ b/Music/RPM2023/RPM2023.html
@@ -69,7 +69,7 @@ My setup wasn't entirely without its faults- one of the room mics hummed, and th
 <h4 style="text-align:center;">Videos</h4>
 <p style="text-align:center;">I dislike doing these. Pretending to play an instrument or sing while both being in-time and showing the appropriate conviction is not fun. My antidote to this was to video myself the entire time I was recording the songs. I first attempted to do this with my phone, but it quickly ran out of memory and crashed while recording, losing a songs worth of footage (the footage of <i>She's Written A Song</i>, in case you're wondering). My parents old camcorder stepped up to the plate, and captured the entire rest of the recording sessions without issue. I was able to cull from those videos the sections containing the final takes of the songs, and use those as the basic for the videos.
 <br><br>
-To enhance the videos beyond just footage of me recording the songs, I added visuals wherever they felt appropriate. As is normal for me, once I'm past the stage of awkwardly recording myself, I'm able to enjoy creating videos. I think I'm just allergic to seeing myself on camera. The quickest videos to do were for <i>Farewell</i>, <i>Robot Penguin Warning Song</i>, and <i>Living for the Weekend</i>, none of which required much effort- DALLE.2 AI image generation is quick, as is printing out lyrics, filming them, and added them as a layer above the initial video. The software I used for the majority of the videos, HitFilm Express, was super useful - the blend modes made adding elements to existing footage really easy, and it all looked good without much effort at all.</p>
+To enhance the videos beyond just footage of me recording the songs, I added visuals wherever they felt appropriate. As is normal for me, once I'm past the stage of awkwardly recording myself, I'm able to enjoy creating videos. I think I'm just allergic to seeing myself on camera. The quickest videos to do were for <i>Farewell</i>, <i>Robot Penguin Warning Song</i>, and <i>Living for the Weekend</i>, none of which required much effort- DALLE.2 AI image generation is quick<a id="footnote-1-ref" href="#footnote-1">*</a>, as is printing out lyrics, filming them, and added them as a layer above the initial video. The software I used for the majority of the videos, HitFilm Express, was super useful - the blend modes made adding elements to existing footage really easy, and it all looked good without much effort at all.</p>
 
 <img src="LftWLyrics.jpg" title="A slightly blurry shot of the printed lyrics for Living for the Weekend, laid out in a line on the floor as per the song's video" alt="Living for the Weekend lyrics"></img>
 
@@ -83,10 +83,11 @@ Between this EP and the last album, I feel like I'm starting to build up a colle
 
 <h4 style="text-align:center;">Where to find</h4>
 <p style="text-align:center;">It's available on <a href="https://oliverhagen.bandcamp.com/album/perfection-cant-be-rushed-but-this-sure-can">Bandcamp</a>, <a href="https://oliverhagen.bandcamp.com/album/perfection-cant-be-rushed-but-this-sure-can">Spotify</a>, and <a href="https://youtube.com/playlist?list=PL776zvniD1BgejY1hwlu_AQt2f5ICpiuN">YouTube</a>.</p>
-
+<br><br><br><br><br>
+<p id="footnote-1">*The sentence you just read regarding DALLE.2 was written before AI became what it is; at the time it was a diversion producing humorously distorted results. The paragraph you are currently reading was written in mid-2025, and AI is a significant threat mentally, creatively, financially and environmentally to a very large number of people. I strongly dislike AI in creative applications. It's very impressive technology that I'm sure has some highly useful applications, but it's being misused and allowed to grow in very frightening ways. I will never use AI for anything again and considered getting rid of the original video for <i>Robot Penguin Warning Song</i>, but that seems a little revisionist. &#60;&#47;rant&#62; <a href="#footnote-1-ref">&#8617;</a></p>
 
 <hr>
-Last updated 2024-11-07
+Last updated 2025-07-26
 </body>
 </html>
 
