--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
 <h2 style="background-color:tomato; margin:30px; border:5px; text-align:center; color:white;">For musical bookings, see the 'Contact Me' section below.</h2>
 	
 <h3>About Me:</h3>
-<p>I'm a 23-year-old musician and hobbyist maker of various things. Currently based in Reading, UK, playing in <a href="https://www.moonagebowietribute.co.uk/">Moonage, a David Bowie Tribute Band</a>, <a href="https://www.instagram.com/mr_pineapple_band/">Mr Pineapple, a somewhat silly and proggy rock band,</a> and <a href="http://bowseywoods.uk/">Bowsey Woods, project of Reading-based singer/songwriter Andy Barker.</a></p>
+<p>I'm a 23-year-old musician and hobbyist maker of various things. Currently based in Reading, UK, working as an Apprentice Instrument Technician at <a href="https://www.hickies.co.uk/instrument-repair">Hickies Music Store</a>, and playing in <a href="https://www.moonagebowietribute.co.uk/">Moonage, a David Bowie Tribute Band</a>, <a href="https://www.instagram.com/mr_pineapple_band/">Mr Pineapple, a somewhat silly and proggy rock band,</a> and <a href="http://bowseywoods.uk/">Bowsey Woods, project of Reading-based singer/songwriter Andy Barker.</a></p>
 <p>There's still a lot to write up, but this website aims to collect together various projects I've done over the years, including:</p>
 <ul>
 	<li>A MIDI-based lightshow device for my keyboard</li>
@@ -189,10 +189,12 @@
 <br><br>	
 Current planned improvements include better scaling for mobile devices and very large screens, and some sort of dark mode which auto-switches depending on the timezone from which the site is accessed.
 <br><br>
-I do not plan on switching to a website supplier/designer such as Squarespace, because apparently I'm a stubborn old fart trapped in a young man's body.</p>
+I do not plan on switching to a website supplier/designer such as Squarespace, because apparently I'm a stubborn old fart trapped in a young man's body.
+<br><br>
+AI is trash and shouldn't be used for anything creative. That's for the humans to do.</p>
 
 <hr>
-Last updated 2025-05-03
+Last updated 2025-07-26
 </body>
 </html>
 
